# google-adk-mcp-demo-1

./: .gitignore  AGENT_DEPLOYED.md  CLAUDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUCCESS.txt  HOW_TO_ACCESS_AGENT.md  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING_GUIDE.md  TRAINING_GUIDE.md  deployment-outputs.json
agent/: AGENT_DEPLOYMENT_GUIDE.md  README.md  agent_config.yaml  chat_with_agent.py  deploy_agent.py  deploy_agent_programmatic.py  pyproject.toml  requirements.txt  run_agent.sh  test_deployed_agent.py
agent/calculator_agent/: __init__.py  agent.py  prompt.py  tools.py
agent/deployment/: __init__.py  deploy.py  deploy_inline.py  test_deployment.py
agent/prompts/: system_prompt.txt
docs/: AGENT_ENGINE_EXPLAINED.md  ARCHITECTURE_DEEP_DIVE.md  CODE_WALKTHROUGH.md  DEPLOYMENT_EXPLAINED.md  MCP_SERVER_EXPLAINED.md  UI_DEVELOPMENT.md
mcp-server/: Dockerfile  requirements.txt  service.yaml
mcp-server/src/: calculator_server.py  database.py  http_server.py
mcp-server/src/auth/: __init__.py  api_key_handler.py  dependencies.py  jwt_handler.py  models.py
mcp-server/src/rbac/: __init__.py  permissions.py  roles.py
scripts/: deploy.sh  test-mcp-server.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ui/: README.md  app.py  config.py  requirements.txt  run.sh  styles.css  utils.py
